--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.7.0",
@@ -15,6 +16,8 @@
     "expo-status-bar": "^1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-ble-manager": "^8.4.3",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
@@ -28,6 +31,7 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0"
   },
