--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/themed": "^4.0.0-rc.6",
+    "base-64": "^1.0.0",
     "expo-status-bar": "^1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
